fix realm config

--- a/config/auths.js.example
+++ b/config/auths.js.example
@@ -1,4 +1,4 @@
 exports.settings = {
-    'realm-editor': ['alice', 'bob'],
-    'realm-admin': ['bob']
+    'distilled-realm-editor': ['alice', 'bob'],
+    'distilled-realm-admin': ['bob']
 };
