tweak server config example

--- a/config/server.js.example
+++ b/config/server.js.example
@@ -1,7 +1,7 @@
 exports.settings = {
     host: "localhost",
     port: 8080,
-    admin: ADMIN-EMAIL,
+    admin: "ADMIN-EMAIL",
     baseUrl: function() {
         if(this.port===80)
             return 'http://' + this.host;
